fix:text alignment and fonts

--- a/src/app/login/login.module.css
+++ b/src/app/login/login.module.css
@@ -137,7 +137,10 @@
   }
 
   .content {
+    gap:2rem;
     padding: 2rem;
+
+height: 550px;
     border-radius: 30px;
   }
 
